--- a/portfolio.html
+++ b/portfolio.html
@@ -17,37 +17,33 @@
     <title>домашнее задание #2</title>
   </head>
   <body>
-    <!-- Шапка страницы Портфолио -->
+    <!-- Шапка страницы Студия -->
     <header class="page-header">
-      <div class="conteiner">
-        <div class="nav">
-          <nav class="nav-header">
-            <a lang="en" href="./index.html" class="logo-first"
-              >Web<span class="logo-second">Studio</span></a
-            >
-            <ul class="site-nav">
-              <li class="site-item"><a href="./index.html" class="link">Студия</a></li>
-              <li class="site-item">
-                <a href="./portfolio.html" class="link current">Портфолио</a>
-              </li>
-              <li class="site-item"><a href="./index.html" class="link">Контакты</a></li>
-            </ul>
-          </nav>
-          <ul class="site-link">
-            <li class="link-item">
-              <a lang="en" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li class="link-item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
+      <div class="conteiner nav">
+        <nav class="nav-header">
+          <a lang="en" href="./index.html" class="logo-first"
+            >Web<span class="logo-second">Studio</span></a
+          >
+          <ul class="site-nav">
+            <li class="site-item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="site-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li class="site-item"><a href="./index.html" class="link">Контакты</a></li>
           </ul>
-        </div>
+        </nav>
+        <ul class="site-link">
+          <li class="link-item">
+            <a lang="en" href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="link-item">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
 
     <!-- Услуги компании -->
     <main>
-      <section class="portfolio padding">
+      <section class="portfolio section">
         <div class="conteiner">
           <h1 class="visually-hidden">Услуги компании</h1>
           <ul class="portfolio-list">
@@ -179,30 +175,32 @@
 
     <footer class="footer">
       <div class="conteiner">
-        <a lang="en" href="./index.html" class="logo-first"
-          >Web<span class="logo-third">Studio</span></a
-        >
-        <address class="address">
-          <ul class="address-list">
-            <li class="address-item">
-              <a
-                href="https://goo.gl/maps/Czf4B29jXcuFBirJA"
-                target="_blank"
-                rel="noreferrer nofollow noopener"
-                class="location-link"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="contact-item">
-              <a lang="en" href="mailto:info@devstudio.com" class="contact-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contact-item">
-              <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="footer-logo">
+          <a lang="en" href="./index.html" class="logo-first"
+            >Web<span class="logo-third">Studio</span></a
+          >
+          <address class="address">
+            <ul class="address-list">
+              <li class="address-item">
+                <a
+                  href="https://goo.gl/maps/Czf4B29jXcuFBirJA"
+                  target="_blank"
+                  rel="noreferrer nofollow noopener"
+                  class="location-link"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="contact-item">
+                <a lang="en" href="mailto:info@devstudio.com" class="contact-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="contact-item">
+                <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
