--- a/portfolio.html
+++ b/portfolio.html
@@ -175,32 +175,30 @@
 
     <footer class="footer">
       <div class="conteiner">
-        <div class="footer-logo">
-          <a lang="en" href="./index.html" class="logo-first"
-            >Web<span class="logo-third">Studio</span></a
-          >
-          <address class="address">
-            <ul class="address-list">
-              <li class="address-item">
-                <a
-                  href="https://goo.gl/maps/Czf4B29jXcuFBirJA"
-                  target="_blank"
-                  rel="noreferrer nofollow noopener"
-                  class="location-link"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
-              </li>
-              <li class="contact-item">
-                <a lang="en" href="mailto:info@devstudio.com" class="contact-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="contact-item">
-                <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
+        <a lang="en" href="./index.html" class="footer-logo"
+          >Web<span class="logo-third">Studio</span></a
+        >
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-item">
+              <a
+                href="https://goo.gl/maps/Czf4B29jXcuFBirJA"
+                target="_blank"
+                rel="noreferrer nofollow noopener"
+                class="location-link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="contact-item">
+              <a lang="en" href="mailto:info@devstudio.com" class="contact-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contact-item">
+              <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
       </div>
     </footer>
   </body>
